--- a/templates/examinations/exercice_rendering.haml
+++ b/templates/examinations/exercice_rendering.haml
@@ -40,7 +40,7 @@
                 %input{type: "number", value: "", name: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-X", id: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-X"}
                 %input{type: "number", value: "", name: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-Y", id: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-Y"}
           -elif answer.type == "chart-barchart"
-            %script{type: "text/javascript", src: "/static/js/chart.js"}
+            %script{type: "text/javascript", src: "/static/js/barchart.js"}
             -with name=forloop.counter0
               -# Group 7
               %input{type: "hidden", value: "", name: "{{ name }}", id: "barchart-hiddenInput"}
