--- a/templates/professor/exercice/validation_form.haml
+++ b/templates/professor/exercice/validation_form.haml
@@ -168,7 +168,7 @@
                   %button.btn.btn-success.btn-sm.btn-updateBar{ng-model: "createBarChart", onclick: "chart_btnUpdate($(this))", type: "button"}
                     %span.glyphicon.glyphicon-ok
                     Mettre à jour le graphique
-                  .jxgbox.chartQuestion.chartQuestionValidation#jxgbox{id:barChartForm,style:"width:100%; height:676px;margin-top:20px;margin-bottom:20px;",data-chart-type:"chart-barchart",value:"chart-barchart"}
+                  .jxgbox.chartQuestion.chartQuestionValidation.chartQuestionBarchart#jxgbox{id:barChartForm,style:"width:100%; height:676px;margin-top:20px;margin-bottom:20px;",data-chart-type:"chart-barchart",value:"chart-barchart"}
                   .form-group
                     %label.control-label.col-sm-3 Ajouter une nouvelle ordonnée
                     .col-sm-3
