--- a/templates/professor/lesson/student/test/detail.haml
+++ b/templates/professor/lesson/student/test/detail.haml
@@ -260,6 +260,7 @@
                                         -# Group 7
                                         %p (Group 07) File 'templates/professor/lesson/student/test/detail.haml' doesn't contain information to display here.
                                       -#-elif type == "chart-piechart"
+                                      -#-elif type == "chart-frequencychart"
                                 %a.btn.btn-default.infos{id: "{{ question.id }}"} Afficher les sources/informations
                                 %p.hiddeninfo{id: "source_{{ question.id }}"}
                                   %u Source(s) :
