Resolved conflicting variables and method in js files

--- a/templates/professor/exercice/exercice_rendering.haml
+++ b/templates/professor/exercice/exercice_rendering.haml
@@ -85,7 +85,7 @@
             %input.form-control{id: "labelPie",type: "text", ng-model: "labelPie", ng-required: "false", disabled:"disabled"}
         .form-group{style :"overflow: hidden;"}
           .col-sm-2
-            %button.btn.btn-success{onclick: "chart_createPieChartFromForm()", type: "button", disabled:"disabled"}
+            %button.btn.btn-success{onclick: "chart_addFrequency()", type: "button", disabled:"disabled"}
               %span.glyphicon.glyphicon-plus
               Ajouter
           .col-sm-4
