repaired student bar chart

--- a/templates/examinations/exercice_rendering.haml
+++ b/templates/examinations/exercice_rendering.haml
@@ -55,7 +55,7 @@
                     %span.glyphicon.glyphicon-plus
                     Ajouter
                 .col-sm-3
-                  %button.btn.btn-danger.btn-deleteBar{onclick: "chart_deleteLast($(this))", type: "button"}
+                  %button.btn.btn-danger.btn-deleteBar{onclick: "chart_deleteLastBar($(this))", type: "button"}
                     %span.glyphicon.glyphicon-minus
                     Supprimer la dernière
           -elif answer.type == "professor"
