Adding by click is possible for frequency graph

--- a/templates/professor/exercice/validation_form.haml
+++ b/templates/professor/exercice/validation_form.haml
@@ -5,6 +5,7 @@
 -block head
   -compress js
     %script{type: "text/javascript", src: "{% static 'js/professor_validate_exercice.js' %}"}
+    %script{type: "text/javascript", src: "{% static 'js/chart.js' %}"}
     %script{type: "text/javascript", src: "{% static 'js/barchart.js' %}"}
     %script{type: "text/javascript", src: "{% static 'js/piechart.js' %}"}
     %script{type: "text/javascript", src: "{% static 'js/frequencychart.js' %}"}
