--- a/templates/examinations/exercice_rendering.haml
+++ b/templates/examinations/exercice_rendering.haml
@@ -40,6 +40,7 @@
                 %input{type: "number", value: "", name: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-X", id: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-X"}
                 %input{type: "number", value: "", name: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-Y", id: "graph-{{ toploop_counter0 }}-{{ answer.graph.type }}-{{ forloop.counter0 }}-Y"}
           -elif answer.type == "chart-barchart"
+            %script{type: "text/javascript", src: "/static/js/chart.js"}
             %script{type: "text/javascript", src: "/static/js/barchart.js"}
             -with name=forloop.counter0
               -# Group 7
@@ -59,6 +60,7 @@
                     %span.glyphicon.glyphicon-minus
                     Supprimer la dernière
           -elif answer.type == "chart-piechart"
+            %script{type: "text/javascript", src: "/static/js/chart.js"}
             %script{type: "text/javascript", src: "/static/js/piechart.js"}
             -with name=forloop.counter0
               -# Group 7
@@ -76,6 +78,7 @@
                     %span.glyphicon.glyphicon-minus
                     Supprimer le dernier
           -elif answer.type == "chart-frequencychart"
+            %script{type: "text/javascript", src: "/static/js/chart.js"}
             %script{type: "text/javascript", src: "/static/js/frequencychart.js"}
             -with name=forloop.counter0
               -# Group 7
@@ -93,7 +96,7 @@
                     %span.glyphicon.glyphicon-plus
                     Ajouter
                 .col-sm-3
-                  %button.btn.btn-danger.btn-deleteBar{onclick: "chart_deleteLastFrequency($(this))", type: "button"}
+                  %button.btn.btn-danger.btn-deleteFrequency{onclick: "chart_deleteLastFrequency($(this))", type: "button"}
                     %span.glyphicon.glyphicon-minus
                     Supprimer la dernière
           -elif answer.type == "professor"
