Revert to 3b114f00647552f79203d9ecaa66a3e975372b92

--- a/templates/professor/exercice/exercice_with_answers_rendering.haml
+++ b/templates/professor/exercice/exercice_with_answers_rendering.haml
@@ -46,8 +46,17 @@
             %td= answer.graph.coordinates.X
             %td= answer.graph.coordinates.Y
     -elif answer.type == "chart-barchart"
+        %script{type: "text/javascript", src: "/static/js/chart.js"}
         %script{type: "text/javascript", src: "/static/js/barchart.js"}
       .jxgbox.chartQuestion#jxgboxPreview{id:barChartForm,style:"width:634px; height:676px;margin-top:20px;margin-bottom:20px;",data-chart-type:"chart-barchart",value:"chart-barchart",data-chart-raw2:"{{answer.answers}}"}
+    -elif answer.type == "chart-piechart"
+        %script{type: "text/javascript", src: "/static/js/chart.js"}
+        %script{type: "text/javascript", src: "/static/js/piechart.js"}
+      .jxgbox.chartQuestion#jxgboxPreview{id:pieChartForm,style:"width:634px; height:676px;margin-top:20px;margin-bottom:20px;",data-chart-type:"chart-piechart",value:"chart-piechart",data-chart-raw2:"{{answer.answers}}"}
+    -elif answer.type == "chart-frequencychart"
+        %script{type: "text/javascript", src: "/static/js/chart.js"}
+        %script{type: "text/javascript", src: "/static/js/frequencychart.js"}
+      .jxgbox.chartQuestion#jxgboxPreview{id:frequencyChartForm,style:"width:634px; height:676px;margin-top:20px;margin-bottom:20px;",data-chart-type:"chart-frequencychart",value:"chart-frequencychart",data-chart-raw2:"{{answer.answers}}"}
     -elif answer.type == "professor"
       %span
         %p
