--- a/templates/examinations/exercice_rendering.haml
+++ b/templates/examinations/exercice_rendering.haml
@@ -65,7 +65,7 @@
             -with name=forloop.counter0
               -# Group 7
               .form-group
-                %label.control-label.col-sm-3 Ajouter un nouveau secteur (en degrée)
+                %label.control-label.col-sm-3 Ajouter un nouveau secteur (en degrés)
                 .col-sm-3
                   %input.form-control{id: "sector",class: "sector",type: "number", ng-model: "sector", ng-required: "false"}
                 .col-sm-3
